# ROS-ENKI_Murine-Inspired_Behavioural_Simulation

./: .gitignore  README.md
catkin_ws/src/: enki_test.launch  python_plot.py
catkin_ws/src/enki_line_react_control/src/: line_react_control.cpp
catkin_ws/src/enki_ros_pck/: Breitenberg.cpp  CMakeLists.txt  Limbic-object.h  PhysicalEngine.cpp  PhysicalEngine.h  Racer.cpp  Racer.h  ReversalSignals.cpp  ReversalSignals.h  package.xml  parameters.h  run.cpp
catkin_ws/src/enki_ros_pck/Brain/: ctxneuron.cpp  ctxneuron.h  filter.h  limbic-system-model.cpp  limbic-system-model.h  robot.cpp
catkin_ws/src/enki_ros_pck/msg/: Sight.msg
catkin_ws/src/enki_test_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/enki_test_pkg/launch/: enki_test.launch
catkin_ws/src/enki_test_pkg/src/: my_enki_test.cpp
catkin_ws/src/rat_move_pkg/: CMakeLists.txt  callback.cpp  callback.h  package.xml  parameters.h  rat_move.cpp  rat_move.h
catkin_ws/src/rat_move_pkg/Brain/: limbic-system-model.cpp  limbic-system-model.h  robot.cpp  world.cpp  world.h
catkin_ws/src/rat_move_pkg/include/enki_test_pkg/: ReversalSignals.cpp  ReversalSignals.h
catkin_ws/src/rat_move_pkg/msg/: Sight.msg
